base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  # namespace: project-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          # image: kylmps/todo-backend:2.3
          image: kylmps/todo-backend:4.3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 3001
          resources:
            requests: 
              cpu: "100m"
              memory: "50Mi" 
            limits:
              cpu: "150m"
              memory: "100Mi"
