base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: db
  clusterIP: None  # Headless service for StatefulSet
  selector:
    app: postgres
