base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
