base/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-route
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
  - "HOSTNAME_PLACEHOLDER" # This will be patched by the overlays
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /todo
      backendRefs:
        - name: todo-svc
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /todos
      backendRefs:
        - name: todo-backend-svc
          port: 3001
